# visutwin-canvas

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Info.plist  LICENSE  NOTICE  README.md  vcpkg.json
engine/: CMakeLists.txt
engine/cmake/: CMakeDetermineMetalCompiler.cmake  CMakeMetalInformation.cmake  CMakeTestMetalCompiler.cmake
engine/shaders/metal/chunks/: common.metal  forward-fragment-head.metal  forward-fragment-lighting.metal  forward-fragment-tail.metal  forward-vertex.metal  shadow-fragment.metal  shadow-vertex.metal
engine/shaders/vulkan/: forward_basic.frag  forward_basic.vert  forward_basic_spirv.h
engine/src/: log.h
engine/src/core/: eventHandler.cpp  eventHandler.h  guid.h  objectPool.h  path.h  preprocessor.h  readStream.h  refCountedObject.h  sortedLoopArray.h  stringIds.cpp  stringIds.h  tags.cpp  tags.h  uri.h  utils.cpp  utils.h
engine/src/core/math/: color.cpp  color.h  curve.cpp  curve.h  curveEvaluator.cpp  curveEvaluator.h  curveSet.cpp  curveSet.h  defines.h  matrix4.h  matrix4.inl  matrix4Inverse.inl  primitives.cpp  primitives.h  quaternion.h  quaternion.inl  random.h  vector2.h  vector3.h  vector3.inl  vector4.h  vector4.inl
engine/src/core/shape/: boundingBox.cpp  boundingBox.h  boundingSphere.cpp  boundingSphere.h  orientedBox.cpp  orientedBox.h  plane.cpp  plane.h  ray.cpp  ray.h  tri.cpp  tri.h
engine/src/extras/input/: input.h  pose.cpp  pose.h
engine/src/framework/: appOptions.h  applicationStats.cpp  applicationStats.h  constants.h  engine.cpp  engine.h  entity.cpp  entity.h  sceneRegistry.cpp  sceneRegistry.h
engine/src/framework/assets/: asset.cpp  asset.h  assetRegistry.cpp  assetRegistry.h
engine/src/framework/batching/: batch.h  batchGroup.h  batchManager.cpp  batchManager.h  skinBatchInstance.cpp  skinBatchInstance.h
engine/src/framework/bundles/: bundleRegistry.cpp  bundleRegistry.h
engine/src/framework/components/: component.cpp  component.h  componentSystem.h  componentSystem.inl  componentSystemRegistry.cpp  componentSystemRegistry.h
engine/src/framework/gizmo/: transformGizmo.cpp  transformGizmo.h
engine/src/framework/graphics/: picker.cpp  picker.h
engine/src/framework/handlers/: containerResource.h  fontResource.cpp  fontResource.h  resourceLoader.cpp  resourceLoader.h
engine/src/framework/i18n/: i18n.cpp  i18n.h
engine/src/framework/input/: elementInput.cpp  elementInput.h
engine/src/framework/lightmapper/: lightmapper.cpp  lightmapper.h
engine/src/framework/parsers/: assimpParser.cpp  assimpParser.h  glbContainerResource.cpp  glbContainerResource.h  glbParser.cpp  glbParser.h  objParser.cpp  objParser.h  stlParser.cpp  stlParser.h
engine/src/framework/script/: annotation.cpp  annotation.h  annotationManager.cpp  annotationManager.h  script.cpp  script.h  scriptRegistry.cpp  scriptRegistry.h  shadowCatcher.cpp  shadowCatcher.h
engine/src/framework/xr/: xrManager.cpp  xrManager.h
engine/src/platform/: input.cpp  input.h
engine/src/platform/graphics/: bindGroupFormat.cpp  bindGroupFormat.h  blendState.cpp  blendState.h  compute.cpp  compute.h  computePipeline.h  constants.cpp  constants.h  depthState.cpp  depthState.h  deviceCache.cpp  deviceCache.h  dynamicBuffers.cpp  dynamicBuffers.h  gpu.h  gpuProfiler.cpp  gpuProfiler.h  graphicsDevice.cpp  graphicsDevice.h  graphicsDeviceCreate.cpp  graphicsDeviceCreate.h  indexBuffer.cpp  indexBuffer.h  instanceCuller.cpp  instanceCuller.h  renderPass.cpp  renderPass.h  renderPipeline.h  renderTarget.cpp  renderTarget.h  shader.cpp  shader.h  stencilParameters.cpp  stencilParameters.h  texture.cpp  texture.h  textureUtils.cpp  textureUtils.h  uniformBinder.h  (+4 more)
engine/src/platform/input/: controller.cpp  controller.h  gamePads.cpp  gamePads.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  touchDevice.cpp  touchDevice.h
engine/src/scene/: camera.cpp  camera.h  constants.cpp  constants.h  frameGraph.cpp  frameGraph.h  frustumUtils.cpp  frustumUtils.h  graphNode.cpp  graphNode.h  layer.h  light.cpp  light.h  mesh.cpp  mesh.h  meshInstance.cpp  meshInstance.h  scene.cpp  scene.h  skinInstance.cpp  skinInstance.h
engine/src/scene/animation/: animation.cpp  animation.h  skeleton.cpp  skeleton.h
engine/src/scene/composition/: layerComposition.cpp  layerComposition.h  renderAction.h
engine/src/scene/graphics/: envLighting.cpp  envLighting.h  envReproject.cpp  envReproject.h  quadRender.cpp  quadRender.h  renderPassBloom.cpp  renderPassBloom.h  renderPassCameraFrame.cpp  renderPassCameraFrame.h  renderPassCoC.cpp  renderPassCoC.h  renderPassColorGrab.cpp  renderPassColorGrab.h  renderPassCompose.cpp  renderPassCompose.h  renderPassConstants.h  renderPassDepthAwareBlur.cpp  renderPassDepthAwareBlur.h  renderPassDepthGrab.cpp  renderPassDepthGrab.h  renderPassDof.cpp  renderPassDof.h  renderPassDofBlur.cpp  renderPassDofBlur.h  renderPassDownsample.cpp  renderPassDownsample.h  renderPassPrepass.cpp  renderPassPrepass.h  renderPassShaderQuad.cpp  renderPassShaderQuad.h  renderPassSsao.cpp  renderPassSsao.h  renderPassTAA.cpp  renderPassTAA.h  renderPassUpsample.cpp  renderPassUpsample.h
engine/src/scene/gsplay-unified/: gSplatDirector.cpp  gSplatDirector.h
engine/src/scene/immediate/: immediate.cpp  immediate.h
engine/src/scene/lighting/: lightTextureAtlas.cpp  lightTextureAtlas.h  (+3 more)
engine/src/util/: range.h  simd.h  slice.h
examples/: CMakeLists.txt  cameraControls.h
examples/src/: ambient-occlusion-example.cpp  animation-example.cpp  area-picker-example.cpp  assimp-loader-example.cpp  cameraControls.cpp  edge-detect-example.cpp  env-reproject-test-example.cpp  gizmo-translate-example.cpp  glb-loader-example.cpp  instancing-basic-example.cpp  instancing-culled-example.cpp  layers-example.cpp  material-test-example.cpp  mesh-decals-example.cpp  multi-view-example.cpp  orbit-example.cpp  raycast-example.cpp  reflection-planar-blurred-example.cpp  render-to-texture-example.cpp  shadow-cascades-example.cpp  taa-example.cpp  texture-stream-example.cpp  world-to-screen-example.cpp
tools/: CMakeLists.txt  generate-env-atlas.cpp
(+181 files in other folders)
